# Music_Tui

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
